--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,45 @@
-# Compiled Lua sources
+# Lua compiled files
+*.luac
 luac.out
 
-# luarocks build files
+# LuaRocks packages
+luarocks_modules/
+*.rock
 *.src.rock
 *.zip
 *.tar.gz
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Build artifacts
+build/
+dist/
+*.log
+
+# Solar2D specific
+ResourceDirectory/
+
+# Lapis specific
+logs/
+nginx.conf.compiled
+
+# Temporary files
+tmp/
+temp/
 
 # Object files
 *.o
